style: responsiveness added

--- a/src/app/main-content/contact/contact-form/contact-form.component.html
+++ b/src/app/main-content/contact/contact-form/contact-form.component.html
@@ -38,4 +38,5 @@
     <div *ngIf="isSent" class="success-wrapper">
         <span class="form-success">Message sent successfully!</span>
     </div>
+    <img class="ellipse-1" src="./assets/img/ellipse.svg" alt="ellipse" draggable="false">
 </div>
