--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -6,16 +6,41 @@
     padding-top: 176px;
     padding-bottom: 120px;
 
+    @include mq(tablet) {
+        flex-direction: column;
+        gap: 64px;
+    }
+    @include mq(mobile) {
+        gap: 48px;
+    }
+
     h2 {
         width: 50%;
-        font-size: 121px;
+        font-size: 96px;
         color: $main-color;
         line-height: 1;
+        @include mq(tablet) {
+            width: 100%;
+            text-align: center;
+            font-size: 80px;
+        }
+        @include mq(mobile) {
+            font-size: 64px;
+            text-align: start;
+        }
     }
 
     div {
         width: 50%;
         @include flexbox($fd: column, $ai: center, $gap: 32px);
+        @include mq(tablet) {
+            width: 100%;
+            text-align: center;
+        }
+
+        @include mq(mobile) {
+            text-align: start;
+        }
 
         p {
             color: $font-black;
