--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -11,33 +11,70 @@ h2 {
     font-size: 96px;
     color: $main-color;
     padding-bottom: 100px;
+    @include mq(tablet) {
+        font-size: 80px;
+        text-align: center;
+        padding-bottom: 64px;
+    }
+    @include mq(mobile) {
+        font-size: 64px;
+        text-align: start;
+        padding-bottom: 48px;
+    }
 }
 
 .contact-container {
     @include flexbox($ai: start);
+    @include mq(tablet) {
+        flex-direction: column;
+    }
 }
 
 .info-container {
     width: 50%;
     padding-right: 120px;
     position: relative;
+    @include mq(tablet) {
+        width: 100%;
+        padding: 0;
+        overflow: hidden;
+        padding-bottom: 32px;
+    }
 
     .info-subheading {
         font-weight: bold;
         font-size: 32px;
         color: $main-color;
         padding-bottom: 40px;
+        @include mq(tablet) {
+            text-align: center;
+        }
+        @include mq(mobile) {
+            text-align: start;
+        }
     }
 
     p {
         color: $font-black;
         font-size: 16px;
         padding-bottom: 32px;
+        @include mq(tablet) {
+            text-align: center;
+        }
+        @include mq(mobile) {
+            text-align: start;
+        }
     }
 
     .info-cta {
         font-size: 16px;
         color: $main-color;
+        @include mq(tablet) {
+            text-align: center;
+        }
+        @include mq(mobile) {
+            text-align: start;
+        }
 
         span {
             font-family: 'Baloo 2', 'Montserrat', sans-serif;
@@ -52,6 +89,10 @@ h2 {
         top: 40px;
         left: 160px;
         width: 204px;
+
+        @include mq(tablet) {
+            display: none;
+        }
     }
 }
 
@@ -95,4 +136,7 @@ h2 {
 
 .w-50 {
     width: 50%;
+    @include mq(tablet) {
+        width: 100%;
+    }
 }
