--- a/src/app/main-content/my-work/my-work.component.scss
+++ b/src/app/main-content/my-work/my-work.component.scss
@@ -4,22 +4,42 @@
 section {
     padding-top: 120px;
     padding-bottom: 100px;
+
+    @include mq(tablet) {
+        padding-bottom: 20px;
+        overflow: hidden;
+    }
 }
 
 .intro {
     padding-right: 50%;
     padding-bottom: 120px;
 
+    @include mq(tablet) {
+        padding-right: 0;
+        padding-bottom: 100px;
+    } 
+
     h2 {
+        position: relative;
         color: $main-color;
         font-size: 96px;
         padding-bottom: 32px;
 
+        @include mq(tablet) {
+            text-align: center;
+            font-size: 80px;
+        }
+        @include mq(mobile) {
+            text-align: start;
+            font-size: 64px;
+        }
+
         .ellipse-1 {
-            position: relative;
+            position: absolute;
             z-index: -1;
-            left: 80px;
-            bottom: 32px;
+            right: -80px;
+            bottom: 80px;
             width: 100px;
             display: inline-block;
         }
@@ -28,6 +48,13 @@ section {
     p {
         color: $font-black;
         font-size: 23px;
+
+        @include mq(tablet) {
+            text-align: center;
+        }
+        @include mq(mobile) {
+            text-align: start;
+        }
     }
 }
 
@@ -40,4 +67,9 @@ section {
     padding-right: inherit;
     width: 180px;
     display: inline-block;
+
+    @media (max-width: 415px) {
+        top: 150px;
+        width: 140px;
+    }
 }
