--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -5,10 +5,18 @@ footer {
     padding-top: 120px;
     padding-bottom: 60px;
     background-image: linear-gradient(135deg, $main-color 50%, $secondary-color);
+    @include mq(mobile) {
+        padding-top: 60px;
+    }
 }
 
 .footer-container {
     @include flexbox($jc: space-between);
+    @include mq(mobile) {
+        flex-direction: column;
+        gap: 32px;
+        align-items: center;
+    }
 }
 
 .footer-info {
@@ -22,6 +30,9 @@ footer {
 
 .legal-notice-wrapper {
     text-align: center;
+    @include mq(mobile) {
+        padding-top: 32px;
+    }
 }
 
 .legal-notice-link {
@@ -63,4 +74,5 @@ footer {
 
 .logo-link {
     width: 186px;
+    text-align: center;
 }
