--- a/src/app/shared/styles/mixins.scss
+++ b/src/app/shared/styles/mixins.scss
@@ -20,3 +20,16 @@
         padding-right: 16px;
     }
 }
+
+@mixin mq($breakpoint) {
+    @if $breakpoint == 'mobile' {
+        @media (max-width: 767.98px) {
+            @content;
+        }
+    }
+    @else if $breakpoint == 'tablet' {
+        @media (max-width: 991.98px) {
+            @content;
+        }
+    }
+}
