style(header): hamburger menu added

--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -71,7 +71,9 @@
             other legally prescribed measures). If our risk assessment is negative, we take additional technical
             measures to protect your data. You can access the EU Commission's standard contractual clauses at the
             following link.
-            https://commission.europa.eu/publications/standard-contractual-clauses-controllers-and-processors-eueea_de
+            <span class="link">
+                https://commission.europa.eu/publications/standard-contractual-clauses-controllers-and-processors-eueea_de
+            </span>
         </p><br>
         <h3>3.5 How long do we keep your data?</h3>
         <p>We store personal data only for as long as is necessary to fulfill the individual purposes for which the data
