--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -12,7 +12,8 @@ header {
 }
 
 .header-container {
-   @include flexbox($jc: space-between); 
+    @include flexbox($jc: space-between);
+    overflow: hidden;
 }
 
 nav {
@@ -28,9 +29,112 @@ nav {
         text-decoration: none;
         font-weight: 300;
         transition: all .1s ease-in-out;
-        
-       &:hover {
-        text-shadow: 0.5px 0 $main-color, -0.5px 0 $main-color;
-       } 
+
+        &:hover {
+            text-shadow: 0.5px 0 $main-color, -0.5px 0 $main-color;
+        }
     }
+}
+
+.header__hamburger-container {
+    height: 50px;
+    width: 50px;
+    position: relative;
+    z-index: 2;
+    cursor: pointer;
+}
+
+.header__hamburger,
+.header__hamburger:before,
+.header__hamburger:after {
+    content: '';
+    position: absolute;
+    height: 4px;
+    width: 42px;
+    background: $main-color;
+    transition: all .2s ease;
+    right: 0;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.14);
+}
+
+.header__hamburger {
+    top: 25px;
+}
+
+.header__hamburger:before {
+    top: -16px;
+}
+
+.header__hamburger:after {
+    top: 16px;
+}
+
+.hamburger-active .header__hamburger {
+    transform: rotate(-135deg)
+}
+
+.hamburger-active .header__hamburger:before,
+.hamburger-active .header__hamburger:after {
+    top: 0
+}
+
+.hamburger-active .header__hamburger:before {
+    transform: rotate(90deg)
+}
+
+.header__menu {
+    z-index: 1;
+    min-width: 100%;
+    min-height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+    text-align: center;
+    transition: all 0.3s ease-in-out;
+    transform: translateX(100%);
+    @include flexbox();
+
+    img {
+        position: absolute;
+        top: 32px;
+        left: 16px;
+        opacity: 0;
+        z-index: 2;
+        transition: opacity .3s ease-in-out;
+    }
+
+    .menu-logo {
+        opacity: 1;
+    }
+}
+
+.header__menu-overlay {
+    opacity: 1;
+    transform: translateX(0);
+    background: rgba(255, 255, 255, 0.75);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+}
+
+.header__menu-list {
+    padding: 0;
+}
+
+.header__menu-item {
+    list-style: none;
+}
+
+.header__menu-link {
+    color: $main-color;
+    display: inline-block;
+    font-size: 26px;
+    margin-bottom: 32px;
+    text-decoration: none;
+    transition: all .1s ease-in-out;
+}
+
+.header__menu-link:hover {
+    font-weight: bold;
 }
