style: animation on scroll added

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,14 +1,14 @@
 <section>
-    <div class="container">
+    <div class="container o-hidden">
         <div class="about__container">
-            <h2>Let's work together</h2>
+            <h2 data-aos="fade-right">Let's work together</h2>
             <div>
-                <p>I am a Front-end developer based in Munich, Germany. I enjoy helping designers and companies bring their ideas into real life.
+                <p data-aos="fade-left">I am a Front-end developer based in Munich, Germany. I enjoy helping designers and companies bring their ideas into real life.
                     I am looking forward to continuing my developer career with a job in a junior web developer position.
                     <br><br>
                     If you think I'd be a good match for your projects, contact me!
                 </p>
-                <a href="#contact" class="main-button">Send a message</a>
+                <a data-aos="fade-down" href="#contact" class="main-button">Send a message</a>
             </div>
         </div>
         <img class="ellipse" src="./assets/img/ellipse.svg" alt="ellipse" draggable="false">
