--- a/src/app/main-content/hero/hero.component.html
+++ b/src/app/main-content/hero/hero.component.html
@@ -1,10 +1,10 @@
 <section class="hero">
     <div class="container">
         <div class="hero__main-content">
-            <div class="hero__left">
+            <div class="hero__left" data-aos="fade-right">
                 <img src="./assets/img/personal-img.png" alt="Image of Developer" draggable="false">
             </div>
-            <div class="hero__right">
+            <div class="hero__right" data-aos="fade-left">
                 <h1><span class="greet">Hello! I am Devrim</span>
                     <br>FRONTEND DEVELOPER</h1>
             </div>
