--- a/src/app/main-content/skill-set/skill-set.component.html
+++ b/src/app/main-content/skill-set/skill-set.component.html
@@ -1,7 +1,7 @@
 <section>
     <div class="container">
-        <h2>Skill set</h2>
-        <div class="icons">
+        <h2 data-aos="zoom-in">Skill set</h2>
+        <div class="icons" data-aos="zoom-in">
             <div class="icons-top">
                 <ng-container *ngFor="let skill of skills, let i = index">
                     <div class="icon-container" *ngIf="i < 5">
