--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -1,11 +1,11 @@
 <section>
     <div class="container">
-        <h2>Contact</h2>
+        <h2 data-aos="fade-right">Contact</h2>
         <div class="contact-container">
             <div class="info-container">
-                <div class="info-subheading">Got a problem to solve?</div>
-                <p>Contact me through this form, I am interested in hearing you, knowing your ideas and contributing to your projects with my work.</p>
-                <div class="info-cta">Need a Frontend developer? <span>Contact me!</span></div>
+                <div class="info-subheading" data-aos="fade-right">Got a problem to solve?</div>
+                <p data-aos="fade-right">Contact me through this form, I am interested in hearing you, knowing your ideas and contributing to your projects with my work.</p>
+                <div class="info-cta" data-aos="fade-right">Need a Frontend developer? <span>Contact me!</span></div>
                 <img class="ellipse-1" src="./assets/img/ellipse.svg" alt="ellipse" draggable="false">
             </div>
             <app-contact-form class="w-50"></app-contact-form>
