--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -2,9 +2,10 @@
 @import '../../shared/styles/variables.scss';
 
 section {
-    padding-top: 100px;
+    padding-top: 40px;
     padding-bottom: 120px;
     background-image: linear-gradient(168deg, transparent 50%, rgba(89, 136, 255, 0.2));
+    overflow: hidden;
 }
 
 h2 {
