--- a/src/app/main-content/my-work/my-work.component.scss
+++ b/src/app/main-content/my-work/my-work.component.scss
@@ -3,7 +3,9 @@
 
 section {
     padding-top: 120px;
-    padding-bottom: 100px;
+    padding-bottom: 160px;
+    overflow: hidden;
+    position: relative;
 
     @include mq(tablet) {
         padding-bottom: 20px;
@@ -34,15 +36,6 @@ section {
             text-align: start;
             font-size: 64px;
         }
-
-        .ellipse-1 {
-            position: absolute;
-            z-index: -1;
-            right: -80px;
-            bottom: 80px;
-            width: 100px;
-            display: inline-block;
-        }
     }
 
     p {
@@ -71,5 +64,23 @@ section {
     @media (max-width: 415px) {
         top: 150px;
         width: 140px;
+    }
+}
+
+.ellipse-1 {
+    position: absolute;
+    z-index: -1;
+    right: 38%;
+    top: 60px;
+    width: 100px;
+    display: inline-block;
+
+    @include mq(tablet) {
+        right: 18%;
+    }
+
+    @include mq(mobile) {
+        right: 0;
+        transform: translateX(50%);
     }
 }
