--- a/src/app/main-content/my-work/work-sample/work-sample.component.html
+++ b/src/app/main-content/my-work/work-sample/work-sample.component.html
@@ -1,17 +1,18 @@
 <div class="work-sample" [class.jc-end]="index % 2 !== 0" [style.padding-bottom.px]="samplesLength - 1 == index ? 0 : null">
     <div class="sample-img-container">
         <a [href]="sample.testURL" target="_blank">
-            <img class="sample-img" [src]="sample.image" [alt]="'Image of ' + sample.title">
+            <img class="sample-img" [src]="sample.image" 
+                [index]="index" appDataAos [alt]="'Image of ' + sample.title">
         </a>
         <img *ngIf="index == 0" class="ellipse-3" src="./assets/img/ellipse.svg" alt="ellipse" draggable="false">
         <img *ngIf="index == 1" class="ellipse-4" src="./assets/img/ellipse-left.svg" alt="ellipse" draggable="false">
     </div>
 
     <div class="work-description" [class.ai-end]="index % 2 !== 0">
-        <h3>{{ sample.title }}</h3>
-        <div>{{ sample.tools }}</div>
-        <p [class.t-end]="index % 2 !== 0">{{ sample.description }}</p>
-        <div class="buttons">
+        <h3 [index]="index + 1" appDataAos>{{ sample.title }}</h3>
+        <div [index]="index + 1" appDataAos>{{ sample.tools }}</div>
+        <p [class.t-end]="index % 2 !== 0" [index]="index + 1" appDataAos>{{ sample.description }}</p>
+        <div data-aos="fade-down" class="buttons">
             <a [href]="sample.githubURL" target="_blank" class="main-button">GitHub</a>
             <a [href]="sample.testURL" target="_blank" class="secondary-button">Live test</a>
         </div>
