style: fix hover on touchscreens

--- a/src/app/main-content/contact/contact-form/contact-form.component.scss
+++ b/src/app/main-content/contact/contact-form/contact-form.component.scss
@@ -40,12 +40,13 @@
 
     .form-input:hover,
     .form-text:hover {
-        outline: 1px solid $main-color;
+        box-shadow: 0 0 0 1px $main-color;
     }
 
     .form-input:focus,
     .form-text:focus {
-        outline: 1px solid $main-color;
+        box-shadow: 0 0 0 1px $main-color;
+        outline: none;
     }
 
     .form-button {
