--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -10,6 +10,7 @@
                     <li><a [routerLink]="['/']" fragment="about">About Me</a></li>
                     <li><a [routerLink]="['/']" fragment="skills">Skill Set</a></li>
                     <li><a [routerLink]="['/']" fragment="work">My Work</a></li>
+                    <li><a [routerLink]="['/']" fragment="contact">Contact</a></li>
                 </ul>
             </nav>
             <div *ngIf="screenWidth <= 767.98">
