chore: clean up

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -3,10 +3,12 @@
         <div class="about__container">
             <h2 data-aos="fade-right">Let's work together</h2>
             <div>
-                <p data-aos="fade-left">I am a Front-end developer based in Munich, Germany. I enjoy helping designers and companies bring their ideas into real life.
-                    I am looking forward to continuing my developer career with a job in a junior web developer position.
+                <p data-aos="fade-left">As a Frontend Developer based in Aarau, Switzerland, I enjoy turning design concepts and business visions into solutions. 
+                    With prior experience in designing websites that convert visitors to customers I understand the importance
+                    of an excellent user experience in applications.
+                    My straightforward approach and hands on mentality enable me to dive deep into new technologies and embrace technical challenges. 
                     <br><br>
-                    If you think I'd be a good match for your projects, contact me!
+                    If you're in search of a committed developer to bring your projects to life, I'm excited to connect with you!
                 </p>
                 <div data-aos="fade-down">
                     <a href="#contact" class="main-button">Send a message</a>
