--- a/src/app/main-content/hero/hero.component.html
+++ b/src/app/main-content/hero/hero.component.html
@@ -16,7 +16,7 @@
             <a href="mailto:devrim.koepeli@outlook.com">
                 <img src="./assets/img/mail.svg" alt="Mail Icon">
             </a>
-            <a href="https://ch.linkedin.com/" target="_blank">
+            <a href="https://linkedin.com/in/devrimkoepeli" target="_blank">
                 <img src="./assets/img/linkedin.svg" alt="Linkedin Icon">
             </a>
         </div>
