--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer [class.bottom]="clientHeight >= 1115 && isLegalNoticeRoute">
     <div class="container">
         <div class="footer-container">
             <div class="logo-link">
@@ -16,7 +16,7 @@
                 <a href="mailto:devrim.koepeli@outlook.com">
                     <img src="./assets/img/message-white.svg" alt="Message">
                 </a>
-                <a href="https://ch.linkedin.com/" target="_blank">
+                <a href="https://linkedin.com/in/devrimkoepeli" target="_blank">
                     <img src="./assets/img/linkedin-white.svg" alt="LinkedIn">
                 </a>
             </div>
