--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="legal-notice-wrapper">
-            <a class="legal-notice-link" routerLink="/legal-notice">Legal Notice</a>
+            <a class="legal-notice-link" routerLink="/legal-notice">{{ isEnglish() ? translations.english : translations.german }}</a>
         </div>
     </div>
 </footer>
