--- a/src/app/legal-notice/legal-notice.component.html
+++ b/src/app/legal-notice/legal-notice.component.html
@@ -1,31 +1,62 @@
 <section>
     <div class="container">
-        <h1>Legal Notice</h1>
-        <p>
-            <b>Responsible entity:</b>
-            <br />Devrim Köpeli
-            <br />Hasenweg 7
-            <br />5034 Suhr
-            <br />Switzerland
-            <br /><strong>Email</strong>: devrim.koepeli&#64;outlook.com
-            <br /><br />
-            <strong>Disclaimer</strong>
-            <br />The author assumes no liability for the correctness,
-            accuracy, timeliness, reliability and completeness of the information.<br />Liability claims against the author
-            for
-            material or immaterial damage resulting from access to, use or non-use of the published information, from misuse
-            of
-            the connection or from technical malfunctions are excluded.<br /><br />All offers are non-binding. The author
-            expressly reserves the right to change, add to, or delete parts of the pages or the entire offer without prior
-            notice, or to temporarily or permanently cease publication.<br /><br /><strong>Disclaimer for content and
-                links</strong><br />References and links to third party websites are outside our area of responsibility. It
-            rejected any responsibility for such websites. Access to and use of such websites is at the user's own
-            risk.<br /><br /><strong>Copyright declaration</strong><br />The copyrights and all other rights to content,
-            images,
-            photos or other files on this website belong exclusively to Devrim Köpeli or the specifically named rights holders. The
-            written consent of the copyright holder must be obtained in advance for the reproduction of any
-            elements.<br /><br /><strong>Source</strong>: <a style='color:inherit;text-decoration:none;'
-                href='https://brainbox.swiss/'>BrainBox Solutions</a>
-        </p>
+        <div *ngIf="isEnglish()">
+            <h1>Legal Notice</h1>
+            <p>
+                <b>Responsible entity:</b>
+                <br />Devrim Köpeli
+                <br />Hasenweg 7
+                <br />5034 Suhr
+                <br />Switzerland
+                <br /><strong>Email</strong>: devrim.koepeli&#64;outlook.com
+                <br /><br />
+                <strong>Disclaimer</strong>
+                <br />The author assumes no liability for the correctness,
+                accuracy, timeliness, reliability and completeness of the information.<br />Liability claims against the author
+                for
+                material or immaterial damage resulting from access to, use or non-use of the published information, from misuse
+                of
+                the connection or from technical malfunctions are excluded.<br /><br />All offers are non-binding. The author
+                expressly reserves the right to change, add to, or delete parts of the pages or the entire offer without prior
+                notice, or to temporarily or permanently cease publication.<br /><br /><strong>Disclaimer for content and
+                    links</strong><br />References and links to third party websites are outside our area of responsibility. It
+                rejected any responsibility for such websites. Access to and use of such websites is at the user's own
+                risk.<br /><br /><strong>Copyright declaration</strong><br />The copyrights and all other rights to content,
+                images,
+                photos or other files on this website belong exclusively to Devrim Köpeli or the specifically named rights holders. The
+                written consent of the copyright holder must be obtained in advance for the reproduction of any
+                elements.<br /><br /><strong>Source</strong>: <a style='color:inherit;text-decoration:none;'
+                    href='https://brainbox.swiss/'>BrainBox Solutions</a>
+            </p>
+        </div>
+        <div *ngIf="!isEnglish()">
+            <h1>Impressum</h1>
+            <p>
+                <b>Verantwortliche Person:</b>
+                <br />Devrim Köpeli
+                <br />Hasenweg 7
+                <br />5034 Suhr
+                <br />Schweiz
+                <br /><strong>E-Mail</strong>: devrim.koepeli&#64;outlook.com
+                <br /><br />
+                <strong>Haftungsausschluss</strong>
+                <br />Der Autor übernimmt keine Haftung für die Richtigkeit,
+                Aktualität, Zuverlässigkeit und Vollständigkeit der Informationen.<br />Haftungsansprüche gegenüber dem Autor
+                für
+                materielle oder immaterielle Schäden, die aus dem Zugriff auf der Nutzung oder Nichtnutzung der veröffentlichten Informationen oder aus Missbrauch entstehen
+                von
+                der Verbindung oder aus technischen Störungen sind ausgeschlossen.<br /><br />Alle Angebote sind unverbindlich. Der Autor
+                behält sich ausdrücklich das Recht vor, Teile der Seiten oder das gesamte Angebot ohne vorherige Ankündigung zu verändern, zu ergänzen oder zu löschen
+                kündigen oder die Veröffentlichung vorübergehend oder endgültig einstellen.<br /><br /><strong>Haftungsausschluss für Inhalte und
+                    Links</strong><br />Verweise und Links auf Websites Dritter liegen außerhalb unseres Verantwortungsbereichs. Es
+                lehnt jegliche Verantwortung für solche Websites ab. Der Zugriff auf und die Nutzung solcher Websites erfolgt auf eigene Faust des Nutzers
+                Risiko.<br /><br /><strong>Urheberrechtserklärung</strong><br />Das Urheberrecht und alle anderen Rechte an Inhalten,
+                Bilder,
+                Fotos oder andere Dateien auf dieser Website gehören ausschließlich Devrim Köpeli oder den speziell genannten Rechteinhabern. Der
+                Für die Vervielfältigung jeglicher Art ist vorab die schriftliche Zustimmung des Urheberrechtsinhabers einzuholen.
+                <br /><br /><strong>Quelle</strong>: <a style='color:inherit;text-decoration:none;'
+                    href='https://brainbox.swiss/'>BrainBox Solutions</a>
+            </p>
+        </div>
     </div>
 </section>
