--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -1,11 +1,13 @@
 <section>
     <div class="container">
-        <h2 data-aos="fade-right">Contact</h2>
+        <h2 data-aos="fade-right">{{ isEnglish() ? translations.english.title : translations.german.title }}</h2>
         <div class="contact-container">
             <div class="info-container">
-                <div class="info-subheading" data-aos="fade-right">Got a problem to solve?</div>
-                <p data-aos="fade-right">Contact me through this form, I am interested in hearing you, knowing your ideas and contributing to your projects with my work.</p>
-                <div class="info-cta" data-aos="fade-right">Need a Frontend developer? <span>Contact me!</span></div>
+                <div class="info-subheading" data-aos="fade-right">{{ isEnglish() ? translations.english.subtitle : translations.german.subtitle }}</div>
+                <p data-aos="fade-right">{{ isEnglish() ? translations.english.description : translations.german.description }}</p>
+                <div class="info-cta" data-aos="fade-right">{{ isEnglish() ? translations.english.q : translations.german.q }}
+                    <span>{{ isEnglish() ? translations.english.a : translations.german.a }}</span>
+                </div>
                 <img class="ellipse-1" src="./assets/img/ellipse.svg" alt="ellipse" draggable="false">
             </div>
             <app-contact-form class="w-50"></app-contact-form>
