--- a/src/app/main-content/my-work/work-sample/work-sample.component.scss
+++ b/src/app/main-content/my-work/work-sample/work-sample.component.scss
@@ -127,6 +127,7 @@
             position: relative;
             overflow: hidden;
             margin-left: 32px;
+            text-align: center;
             @media (max-width: 400px) {
                 margin-left: 0;
             }
